<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.wormhole_xtreme.wormhole</groupId>
	<version>1.5.0</version>
	<artifactId>WormholeXTreme</artifactId>
	<packaging>jar</packaging>
	<name>Wormhole-X-Treme</name>
	 <properties>
		 <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<!--
			Compile against the OLDEST server this plugin supports, not the newest. A plugin
			built against an old API runs on newer servers; one built against a new API can
			call something the old server has never heard of, and nothing catches that until
			a player reports a crash. Building against the floor makes the compiler enforce
			the floor.

			CI overrides this with -Dspigot.api.version to also build against the newest
			supported server, which is what catches an API that has been removed rather than
			added. Both directions have to hold, and neither is checked by the other.
		-->
		<spigot.api.version>1.20.4-R0.1-SNAPSHOT</spigot.api.version>
		 <maven.compiler.release>17</maven.compiler.release>
		 <java.version>17</java.version>
	 </properties>
	<url>http://www.wormhole-xtreme.com</url>
	<build>
		<resources>
			<!-- plugin.yml carries the version Bukkit reports, and it used to hardcode it,
			     so the pom said 1.1.0 while the server said 1.0.0. Filtering makes the pom
			     the only place a version is written. Only plugin.yml is filtered: shape
			     files and config.yml are copied untouched so nothing there can be mistaken
			     for a property to substitute. -->
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
				<includes>
					<include>plugin.yml</include>
				</includes>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>false</filtering>
				<excludes>
					<exclude>plugin.yml</exclude>
				</excludes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.14.0</version>
				<configuration>
					<release>${java.version}</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.3.0</version>
				<configuration>
					<useModulePath>false</useModulePath>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.3.1</version>
				<configuration>
					<archive>
						<manifestFile>src/main/resources/META-INF/MANIFEST.MF</manifestFile>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.4.1</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<!-- Replace the primary artifact with the shaded jar (no -shaded classifier) -->
							<shadedArtifactAttached>false</shadedArtifactAttached>
							<!-- Write output directly to the project's finalName so no -shaded jar remains -->
							<outputFile>${project.build.directory}/${project.build.finalName}.jar</outputFile>
							<!-- Avoid producing a dependency-reduced POM to keep the build simple -->
							<createDependencyReducedPom>false</createDependencyReducedPom>
							<filters>
								<filter>
									<artifact>*:*</artifact>
									<excludes>
										<exclude>META-INF/*.SF</exclude>
										<exclude>META-INF/*.DSA</exclude>
										<exclude>META-INF/*.RSA</exclude>
										<exclude>META-INF/MANIFEST.MF</exclude>
										<exclude>module-info.class</exclude>
										<exclude>META-INF/versions/*/module-info.class</exclude>
									</excludes>
								</filter>
							</filters>
							<transformers>
								<transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>com.wormhole_xtreme.wormhole.WormholeXTreme</mainClass>
								</transformer>
							</transformers>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>com.github.spotbugs</groupId>
				<artifactId>spotbugs-maven-plugin</artifactId>
				<version>4.8.6.6</version>
				<configuration>
					<effort>Max</effort>
					<threshold>Medium</threshold>
					<failOnError>true</failOnError>
					<includeTests>false</includeTests>
				</configuration>
			</plugin>
			<plugin>
				<!-- A local stand-in for part of what SonarCloud reports, so a sweep can be
				     checked before it is pushed rather than after the scan comes back. The
				     rules it runs, and the evidence that each one tracks the Sonar rule it
				     stands in for, are in pmd-ruleset.xml.

				     Deliberately not bound to a phase and deliberately not pmd:check. It
				     covers eight rules, about a third of the open issues, and roughly one
				     finding in five is one SonarCloud does not raise, so failing a build on it
				     would sometimes be failing on nothing. It is run by hand, mvn pmd:pmd
				     -Dformat=csv, and read as a lead. -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>3.28.0</version>
				<configuration>
					<!-- Only honoured from here. Passing -Drulesets= or -Dpmd.rulesets= on the
					     command line is silently ignored: the plugin falls back to its default
					     quickstart set and reports on rules nobody asked for, which looks
					     exactly like a successful run. -->
					<rulesets>
						<ruleset>${project.basedir}/pmd-ruleset.xml</ruleset>
					</rulesets>
					<includeTests>true</includeTests>
				</configuration>
			</plugin>
			<plugin>
				<!-- Coverage for SonarCloud to report against. prepare-agent instruments the
				     tests surefire already runs; report turns that into the XML SonarCloud's
				     Java analyzer picks up automatically from the default
				     target/site/jacoco/jacoco.xml path. Nothing here fails the build on its
				     own; measuring only, the quality gate is what would judge it.

				     Scoped to this project's own classes only: the agent instruments every
				     class actually loaded during the test run, not just ours, and
				     org.bukkit.Material's generated <clinit> is large enough on its own that
				     instrumenting it trips JaCoCo's ASM writer (MethodTooLargeException,
				     65535-byte method limit) and aborts the whole test run. Coverage of a
				     dependency was never the point anyway.

				     The version floor here is the JDK, not the bytecode: this project targets
				     Java 17, but the agent runs inside whichever JVM the tests do, and CI runs
				     them on 25 as well. A JaCoCo older than that JDK rejects the class files
				     the JDK itself loads, so this version tracks the newest JDK in the CI
				     matrix rather than the release level the compiler is given. -->
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.15</version>
				<executions>
					<execution>
						<id>prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
						<configuration>
							<includes>
								<include>com/wormhole_xtreme/**</include>
							</includes>
						</configuration>
					</execution>
					<execution>
						<id>report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-api</artifactId>
			<version>${spigot.api.version}</version>
			<scope>provided</scope>
		</dependency>

		<!--
			Both of these are compile-time only; neither is shaded into the jar.

			SnakeYAML ships with the server — spigot-api declares it, and Bukkit's own
			YamlConfiguration uses it. Bundling our own copy added ~600KB and risked
			shadowing the server's newer version on our classloader.

			Gates are stored as one YAML file each, so the plugin needs no database
			driver at all.
		-->
		<dependency>
			<groupId>org.yaml</groupId>
			<artifactId>snakeyaml</artifactId>
			<!-- Compiled against 2.0; the server supplies 2.2 at runtime. The API used
			     here (Yaml load/dump, DumperOptions) is unchanged between them. -->
			<version>2.0</version>
			<scope>provided</scope>
		</dependency>
		<!-- Test dependencies -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>5.9.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>5.20.0</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<profiles>
		<!--
			The mirror of legacy-api, for servers at the other end. org.spigotmc's
			EntityDismountEvent was removed in 1.20.6, so LegacyGateDismountListener cannot
			compile there and is left out.

			Neither profile is used for the shipped jar. That is built against 1.20.4, the one
			version holding both classes, so the jar carries both listeners and picks at
			runtime. These exist only so CI can check the rest of the plugin against a server
			that has one class or the other but not both.
		-->
		<profile>
			<id>modern-api</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<configuration>
							<excludes>
								<exclude>**/LegacyGateDismountListener.java</exclude>
							</excludes>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>

		<!--
			Builds without GateDismountListener, which is the one class that deliberately
			cannot compile below 1.20.4: it names the EntityDismountEvent package that only
			exists from 1.20.4 on. Everything else has to compile against an older server, and
			this profile is how that is checked rather than assumed.

			On such a server the listener simply never loads and the legacy one is registered
			instead, which is why leaving it out here proves the thing that matters.
		-->
		<profile>
			<id>legacy-api</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<configuration>
							<excludes>
								<exclude>**/GateDismountListener.java</exclude>
							</excludes>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<repositories>
		<repository>
			<id>spigotmc-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
		</repository>
	</repositories>
</project>
